# Quality-Assurance-Agent

./: .env.example  .gitignore  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  test.ipynb
images/: Quality Assurance Agent.excalidraw
src/: __init__.py
src/agents/: __init__.py  qa_agent.py
src/agents/prompts/: __init__.py  qa_prompts.py
src/agents/tools/: __init__.py  test.py
src/configs/: __init__.py  app_config.py  log_config.py
src/controllers/: __init__.py  qa_controller.py
