[project]
name = "quality-assurance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-litellm==0.3.2",
    "langfuse==3.10.1",
    "langgraph==1.0.3",
    "mcp[cli]>=1.22.0",
    "pydantic-settings==2.12.0",
]
